added parallel coordi chart

--- a/myApp/src/app/home/home.component.html
+++ b/myApp/src/app/home/home.component.html
@@ -1,2 +1,4 @@
 <h3>Bar Chart</h3>
-<app-barchart *ngIf="chartData" [data]="chartData"></app-barchart>
+<app-barchart [data]="chartData"></app-barchart>
+
+
