--- a/myApp/src/app/app.component.html
+++ b/myApp/src/app/app.component.html
@@ -2,4 +2,7 @@
   {{title}}
 </h1>
 
+<nav>
+    <a routerLink="/chart" routerLinkActive="active">Crisis Center</a>
+  </nav>
 <router-outlet></router-outlet>
